# universal-test-runner

./: ARCHITECTURE.md  CHANGELOG.md  README.md  justfile  pyproject.toml  tox.ini
test_runner/: runner.py
tests/: conftest.py  test_cli.py  test_command_utils.py  test_commands.py  test_context.py  test_matchers.py  test_runner.py
universal_test_runner/: cli.py  commands.py  context.py  matchers.py  runner.py
