[project]
name = "universal-test-runner"
version = "0.5.1"

authors = [{ name = "David Brownman", email = "beamneocube@gmail.com" }]
description = "Universal, language-aware unit test runner."
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Testing",
]
keywords = ["testing", "test-runner", "pytest"]

dependencies = ["click==8.1.3", "colorama==0.4.6"]

[project.optional-dependencies]
test = ["pytest==7.3.1", "responses==0.23.1"]
release = ["twine==4.0.2", "build==0.10.0"]
ci = ["black==23.3.0", "pyright==1.1.309", "ruff==0.0.277"]

[project.urls]
"Homepage" = "https://github.com/xavdid/universal-test-runner"
"Bug Tracker" = "https://github.com/xavdid/universal-test-runner/issues"
"Author" = "https://xavd.id"
"Changelog" = "https://github.com/xavdid/universal-test-runner/blob/main/CHANGELOG.md"

[project.scripts]
t = "universal_test_runner.runner:run"
universal-test-runner = "universal_test_runner.cli:cli"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

# needed so the LSP performs typechecking
[tool.pyright]

[tool.ruff]
select = ["E", "F", "I001"] # defaults & isort
ignore = ["E501"]
