[project]
name = "universal-test-runner"
version = "0.7.0"

authors = [{ name = "David Brownman", email = "oss@xavd.id" }]
description = "Universal, language-aware unit test runner."
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Testing",
]
keywords = ["testing", "test-runner", "pytest"]

dependencies = ["click==8.1.3", "colorama==0.4.6"]

[project.urls]
"Homepage" = "https://github.com/xavdid/universal-test-runner"
"Bug Tracker" = "https://github.com/xavdid/universal-test-runner/issues"
"Author" = "https://xavd.id"
"Changelog" = "https://github.com/xavdid/universal-test-runner/blob/main/CHANGELOG.md"

[project.scripts]
t = "universal_test_runner.runner:run"
universal-test-runner = "universal_test_runner.cli:cli"

[dependency-groups]
dev = [{ include-group = "test" }, { include-group = "lint" }, "tox"]
test = ["pytest==8.4.2", "responses==0.23.1"]
release = ["twine==6.2.0", "build==1.2.1"]
lint = ["pyright==1.1.376", "ruff==0.5.7"]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

# needed so the LSP performs typechecking
[tool.pyright]

[tool.ruff.lint]
select = ["E", "F", "I001"] # defaults & isort
ignore = ["E501"]
